# learning

./: .gitignore
cs/books/cpp_primer_fifth_edition/: CMakeLists.txt  build.bat  clean.bat  clean_files.bat
cs/books/cpp_primer_fifth_edition/ch1/section1.1/: exercise1.2.cpp
cs/books/cpp_primer_fifth_edition/ch1/section1.2/: exercise1.5.cpp  exercise1.6.tex
cs/books/cpp_primer_fifth_edition/ch1/section1.3/: exercise1.7.cpp  exercise1.8.cpp
cs/books/cpp_primer_fifth_edition/ch1/section1.3/exercise1.7/: README.txt
cs/books/cpp_primer_fifth_edition/ch1/section1.3/exercise1.8/: exercise1.8.tex
cs/books/cpp_primer_fifth_edition/ch1/section1.4/1.4.1/: exercise1.10.cpp
cs/books/cpp_primer_fifth_edition/ch1/section1.4/1.4.1/exercise1.11/: exercise1.11.cpp
cs/books/cpp_primer_fifth_edition/ch1/section1.4/1.4.1/exercise1.9/: exercise1.9.cpp
cs/books/cpp_primer_fifth_edition/ch1/section1.4/1.4.2/: exercise1.12.tex  exercise1.14.tex  exercise1.15.cpp
cs/books/cpp_primer_fifth_edition/ch1/section1.4/1.4.2/exercise1.12/: exercise1.12.cpp
cs/books/cpp_primer_fifth_edition/ch1/section1.4/1.4.2/exercise1.13/: exercise1.13.cpp
cs/books/cpp_primer_fifth_edition/ch1/section1.4/1.4.3/exercise1.16/: exercise1.16.cpp
cs/books/cpp_primer_fifth_edition/ch1/section1.4/1.4.4/: section1.4.4.cpp
cs/books/cpp_primer_fifth_edition/ch1/section1.4/1.4.4/exercise1.17/: exercise1.17.cpp  exercise1.17.tex
cs/books/cpp_primer_fifth_edition/ch1/section1.4/1.4.4/exercise1.18/: exercise1.18.cpp
cs/books/cpp_primer_fifth_edition/ch1/section1.4/1.4.4/exercise1.19/: exercise1.19.cpp
cs/books/cpp_primer_fifth_edition/ch1/section1.5/1.5.1/exercise1.20/: exercise1.20.cpp  exercise1.20.txt
cs/books/cpp_primer_fifth_edition/ch1/section1.5/1.5.1/exercise1.21/: exercise1.21.cpp  exercise1.21.txt
cs/books/cpp_primer_fifth_edition/ch1/section1.5/1.5.1/exercise1.22/: exercise1.22.cpp  exercise1.22.txt
cs/books/cpp_primer_fifth_edition/ch1/section1.5/1.5.2/exercise1.23/: exercise1.23.cpp  exercise1.23.txt
cs/books/cpp_primer_fifth_edition/ch1/section1.5/1.5.2/exercise1.24/: README.txt  exercise1.24.txt
cs/books/cpp_primer_fifth_edition/ch1/section1.6/exercise1.25/: exercise1.25.cpp  exercise1.25.txt
cs/books/cpp_primer_fifth_edition/ch2/section2.1/2.1.1/exercise2.1/: exercise2.1.tex
cs/books/cpp_primer_fifth_edition/ch2/section2.1/2.1.1/exercise2.2/: exercise2.2.tex
cs/books/cpp_primer_fifth_edition/ch2/section2.1/2.1.2/exercise2.3/: exercise2.3.tex
cs/books/cpp_primer_fifth_edition/ch2/section2.1/2.1.2/exercise2.4/: exercise2.4.cpp
(+22 files in other folders)
